# md_code_sync

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
doc/example/: doc.md  example.cpp
src/md_code_sync/: FileReader.py  SourceFile.py  __main__.py
tests/: test_source_file.py
