[project]
name = "md_code_sync"
version = "0.0.1"
authors = [
  { name="dcoello", email="dcpulido91@gmail.com" },
]
description = "tool to inject code snippets from source code files on markdown files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
tests = [
  "pytest-mock==3.14.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  ".",
  "src",
]
