[project]
name = "md_code_sync"
version = "0.0.1"
authors = [
  { name="dcoello", email="dcpulido91@gmail.com" },
]
description = "tool to inject code snippets from source code files on markdown files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
md_code_sync = "md_code_sync.__main__:main"

[project.optional-dependencies]
tests = [
  "pytest-mock==3.14.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  ".",
  "src",
]
